# Modules/Admin/Routes/api.php
@@ -28,6 +28,7 @@ Route::any('excel/watermark', 'v1\ExcelController@watermark');
 Route::any('excel/exportMulti', 'v1\ExcelController@exportMulti');
 Route::any('excel/downloadMulti', 'v1\ExcelController@downloadMulti');
 //测试DNF-GM -- 不加登录校验
-Route::get('dnf/subList', 'v1\DnfController@subList');
-Route::get('dnf/propList', 'v1\DnfController@propList');
-Route::post('dnf/propNum', 'v1\DnfController@propNum');
+Route::any('dnf/subList', 'v1\DnfController@subList');
+Route::any('dnf/propList', 'v1\DnfController@propList');
+Route::any('dnf/propNum', 'v1\DnfController@propNum');
+Route::any('dnf/multiSend', 'v1\DnfController@multiSend');
