# storage/api-docs/api-docs.json
@@ -82,7 +82,7 @@
                     {
                         "name": "type_id",
                         "in": "query",
-                        "description": "种类id 1",
+                        "description": "种类id 1 材料 39 装备 23 消耗品 31 时装礼包",
                         "schema": {
                             "type": "string"
                         }
@@ -135,6 +135,87 @@
                                         "description": "物品数量",
                                         "type": "integer",
                                         "format": "int32"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/api/dnf/multiSend": {
+            "post": {
+                "tags": [
+                    "DNFM-GM"
+                ],
+                "summary": "批量发送物品",
+                "operationId": "8543496216d0271114c7881e74d750f5",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "username": {
+                                        "description": "用户名",
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "code": {
+                                        "description": "邀请码",
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "id": {
+                                        "description": "物品ID",
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "num": {
+                                        "description": "物品数量",
+                                        "type": "integer",
+                                        "format": "int32"
+                                    },
+                                    "page": {
+                                        "description": "页码 1",
+                                        "type": "integer",
+                                        "format": "int32"
+                                    },
+                                    "limit": {
+                                        "description": "数量 10000",
+                                        "type": "integer",
+                                        "format": "int32"
+                                    },
+                                    "title": {
+                                        "description": "物品名称",
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "grade": {
+                                        "description": "等级",
+                                        "type": "integer",
+                                        "format": "int32"
+                                    },
+                                    "type_id": {
+                                        "description": "种类id 1 材料 39 装备 23 消耗品 31 时装礼包",
+                                        "type": "integer",
+                                        "format": "int32"
+                                    },
+                                    "second_type_id": {
+                                        "description": "子类id 25",
+                                        "type": "integer",
+                                        "format": "int32"
+                                    },
+                                    "filter": {
+                                        "description": "物品名称过滤",
+                                        "type": "string",
+                                        "format": "text"
                                     }
                                 },
                                 "type": "object"
